RESOLVED FIXED51356
Include pthread to fix chromium mac build
https://bugs.webkit.org/show_bug.cgi?id=51356
Summary Include pthread to fix chromium mac build
Tony Gentilcore
Reported 2010-12-20 14:53:39 PST
Include pthread to fix chromium mac build
Attachments
Patch (959 bytes, patch)
2010-12-20 14:55 PST, Tony Gentilcore
no flags
Tony Gentilcore
Comment 1 2010-12-20 14:55:54 PST
Tony Gentilcore
Comment 2 2010-12-20 15:03:51 PST
Tony Gentilcore
Comment 3 2010-12-20 15:04:39 PST
I went ahead and landed to get the build green. Please let me know if there is anything wrong w/ the patch.
WebKit Review Bot
Comment 4 2010-12-20 15:58:35 PST
http://trac.webkit.org/changeset/74371 might have broken GTK Linux 64-bit Debug The following tests are not passing: inspector/extensions-audits.html
Note You need to log in before you can comment on or make changes to this bug.